Possible compatibility problems with earlier versions marked with '*'.

Added missing C decl macros for include/yaz/{soap.h,srw.h}, so that
functions from there can be used from C++.

--- 2.0.6 2003/12/04

Frontend server now transfers memory from decoded packages to stream
ODR for search.

NMEM now clears freed blocks with 'Y' (hex 59) to force bad memory
references to show up. 

ZOOM-C now supports standard ZOOM option names as described in v1.4 of
the ZOOM Abstract API.  The older names for the same options are still
also supported for the benefit of old applications.

ZOOM-C supports "implementationId" and "implementationVersion" options
to go along with "implementationName".  These allow the user code to
specify identification strings to be sent to servers.
Add OID for the new ExtLite attribute set.

Add OIDs for NACSIS-CATP, FINMARC2000 and MARC21-fin record-syntaxes,
 as requested/supplid by Ere Maijala <ere@atp.fi>

For generic frontend server, reverse the order of
"toolkit-supplied / application-supplied" strings sent as implementationId,
Name and Version.  Also, remove the spaces around the slash.  This brings
the GFS in line with the behaviour of ZOOM-C on the client side.

Add function ZOOM_scanset_display_term.

yaz-client shows scan displayTerm if present.

Utility yaz-iconv is now installed by default along with the man page 
yaz-iconv.1.

Extend configure check for OpenSSL to use pkg-config where available (such
as RedHat 9).

Incorporate patch by Morten Bogeskov which allows a Unix file socket
server to specify uid/gid/mask for socket using the format
 unix:[user=uid,][group=gid,][umask=mask,]file=path
If file= is omitted the existing format is assumed, e.g.
 unix:path
in which case the mask is 0666 (rw for everybody).

Major restructure of YAZ source. All source in libyaz is in src directory.
Programs in client (yaz-client), ztest (yaz-ztest), zoom (zoom programs),
util (utility programs such as ASN.1 compiler, yaz-marcdump). 
